--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc -w",
-    "start": "node dist/app"
+    "start": "node dist"
   },
   "devDependencies": {
     "@types/node": "^12.12.11"
